@@ -27,6 +27,7 @@ index_return=filter list
 index_warn=Warning - The program <tt>procmail</tt> used for mail filtering is not installed on this system. Any filters defined below are unlikely to work.
 index_alias=Warning - The system is configured to forward all email to your mailbox to the following destinations. Filters defined here will not be used.
 index_aliasme=Note - The system is also configured forward all email to :
+index_force=Warning - The system is configured to not process user-defined mail filters. Any filters defined below are unlikely to work.
 index_period=Minimum time between autoreplies
 index_noperiod=No minimum
 index_mins=minutes
